--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icon.png",
       "type": "image/png",
       "sizes": "192x192"
     },
@@ -18,4 +18,5 @@
       "sizes": "512x512"
     }
   ]
+
 }
